<resources>
    <string name="app_name">DesignTest</string>
    <string name="starGiftDescription">Give the gift of choice and convenience with a Walmart Gift Card! From fashion to furniture to food, Walmart Gift Cards can be redeemed at any Walmart Canada store, on walmart.ca and on Marketplace.</string>
    <string name="howUsedescription">Nam in neque non orci iaculis tempor sit amet quis libero. Suspendisse id magna eu varius.</string>
    <string name="howUse1">Click the walmart.ca. The resulting landing page will contain your E-Gift Card information</string>
    <string name="howUse2">Save or print the E-Gift Card landing page.</string>
    <string name="howUse3">Present the printed E-Gift Card at any Walmart Canada store or use online at walmart.ca/en</string>
    <string name="title1">Nivea women deo clear spray invisible for black and white </string>
    <string name="title2">Extra Whitening Roll-On Whitening Deodorant</string>
    <string name="title3">NIVEA Double Effect Eye Make-Up Remover</string>
    <string name="moreDescription">Offrez une carte-cadeau Walmart, un cadeau de choix et pratique! Des vêtements, aux meubles et aux aliments, les cartes-cadeaux Walmart peuvent être échanges dans toutes les succursales Walmart du Canada, walmart.ca</string>
</resources>