<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/obj1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="61dp"
            android:src="@drawable/obj1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/obj2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="41dp"
            android:src="@drawable/obj2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/obj3"
            android:layout_width="12dp"
            android:layout_height="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/obj3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/leftIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="42dp"
            android:src="@drawable/left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/share"
            app:layout_constraintBottom_toBottomOf="@id/leftIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/startBucksImage"
            android:layout_width="331dp"
            android:layout_height="208dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/starbucks_background"
            android:elevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="16dp"
            android:layout_height="33dp"
            android:layout_marginTop="14.5dp"
            android:layout_marginEnd="33dp"
            android:elevation="20dp"
            android:src="@drawable/dollar"
            app:layout_constraintEnd_toEndOf="@id/startBucksImage"
            app:layout_constraintTop_toTopOf="@id/startBucksImage" />

        <TextView
            android:id="@+id/starBucksCost"
            android:layout_width="17dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:elevation="20dp"
            android:text="5"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@id/startBucksImage"
            app:layout_constraintTop_toTopOf="@id/startBucksImage" />

        <ImageView
            android:id="@+id/starBucksLogo"
            android:layout_width="171dp"
            android:layout_height="132dp"
            android:layout_marginTop="14.5dp"
            android:layout_marginEnd="33dp"
            android:elevation="20dp"
            android:src="@drawable/starbuckslogo"
            app:layout_constraintBottom_toBottomOf="@id/startBucksImage"
            app:layout_constraintEnd_toEndOf="@id/startBucksImage"
            app:layout_constraintStart_toStartOf="@id/startBucksImage"
            app:layout_constraintTop_toTopOf="@id/startBucksImage" />

        <TextView
            android:id="@+id/starBucksName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="172dp"
            android:elevation="20dp"
            android:text="Starbucks"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/startBucksImage"
            app:layout_constraintTop_toTopOf="@id/startBucksImage" />

        <ImageView
            android:id="@+id/starbucksBottom"
            android:layout_width="248dp"
            android:layout_height="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bottom_border_style"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@id/startBucksImage"
            app:layout_constraintEnd_toEndOf="@id/startBucksImage"
            app:layout_constraintStart_toStartOf="@id/startBucksImage" />

        <TextView
            android:id="@+id/description"
            android:layout_width="351dp"
            android:layout_height="28dp"
            android:layout_marginTop="40dp"
            android:text="Description"
            android:textColor="#222222"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startBucksImage" />

        <TextView
            android:id="@+id/starGiftDescription"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/starGiftDescription"
            android:textColor="#222222"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/readMoreLayout"
            android:layout_width="95dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starGiftDescription">

            <TextView
                android:id="@+id/readMore"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:text="Read more"
                android:textColor="#009B8E"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/greenRightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/green_right_arrow"
                app:layout_constraintStart_toEndOf="@id/readMore"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/howUse"
            android:layout_width="351dp"
            android:layout_height="28dp"
            android:layout_marginTop="68dp"
            android:text="How to use"
            android:textColor="#222222"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/readMoreLayout" />

        <TextView
            android:id="@+id/howUseDescription"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/howUsedescription"
            android:textColor="#222222"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/howUse" />

        <ImageView
            android:id="@+id/ellipse1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/howUseDescription" />

        <TextView
            android:id="@+id/howUse1"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/howUse1"
            android:textColor="#222222"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/howUseDescription" />

        <ImageView
            android:id="@+id/ellipse2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="104dp"
            android:src="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ellipse1" />

        <TextView
            android:id="@+id/howUse2"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="94dp"
            android:text="@string/howUse2"
            android:textColor="#222222"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ellipse1" />

        <ImageView
            android:id="@+id/ellipse3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ellipse2" />

        <TextView
            android:id="@+id/howUse3"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="38dp"
            android:text="@string/howUse3"
            android:textColor="#222222"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ellipse2" />

        <ImageView
            android:id="@+id/view2"
            android:layout_width="411dp"
            android:layout_height="84dp"
            android:layout_marginTop="121dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ellipse3"/>

            <TextView
                android:id="@+id/claim"
                android:layout_width="78dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="Claim for"
                android:textColor="#757575"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <ImageView
                android:id="@+id/sign"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg"
                android:src="@drawable/sign"
                app:layout_constraintBottom_toBottomOf="@id/coinCount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/coinCount" />

            <TextView
                android:id="@+id/coinCount"
                android:layout_width="58dp"
                android:layout_height="32dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="36dp"
                android:gravity="center_vertical"
                android:text="6000"
                android:textColor="#222222"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <TextView
                android:id="@+id/coin"
                android:layout_width="56dp"
                android:layout_height="27dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="38dp"
                android:gravity="center_vertical"
                android:text="Coins"
                android:textColor="#222222"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <Button
                android:id="@+id/button1"
                android:layout_width="142dp"
                android:layout_height="56dp"
                android:layout_marginStart="249dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_style"
                android:backgroundTint="@color/button_color"
                android:text="Claim Now"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/button_color"
                app:iconGravity="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>